added more details

--- a/web/about.html
+++ b/web/about.html
@@ -75,7 +75,7 @@
                      <nav id="navigation" class="navigation">
                         <ul>
                            <li class="menu-item-has-children">
-                              <a href="index-v2.html">Home</a>
+                              <a href="index .html">Home</a>
                            </li>
                            <li class="menu-item-has-children">
                               <a href="about.html">About</a>
@@ -111,12 +111,11 @@
                         <div class="row align-items-end">
                            <div class="col-lg-6">
                               <h5 class="dash-style">OUR TOUR GALLERY</h5>
-                              <h2>HELLO. OUR AGENCY HAS BEEN PRESENT BEST IN THE MARKET</h2>
+                              <h2>OUR AGENCY HAS BEEN PRESENT BEST IN THE MARKET</h2>
                            </div>
                            <div class="col-lg-6">
                               <div class="section-disc">
-                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.Placeat nostrud natus tempora justo. Laboriosam, eget mus nostrud natus tempora.</p>
-                                 <p>Lorem ipsum dolor sit amet, consec tetur adipiscing eliting dolor sit amet. Placeat nostrud natus tempora justo nostrud natus tempora.</p>
+                                 <p>Our tour and travel company is dedicated to providing exceptional experiences, crafting unforgettable journeys, and ensuring seamless logistics, allowing you to explore the world with ease and create cherished memories that will last a lifetime.</p>
                               </div>
                            </div>
                         </div>
@@ -130,7 +129,7 @@
                                  </div>
                                  <div class="about-service-content">
                                     <h4>AFFORDABLE PRICE</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    <p>Discover remarkable destinations at affordable prices, making your travel dreams a reality without breaking the bank.</p>
                                  </div>
                               </div>
                            </div>
@@ -141,7 +140,7 @@
                                  </div>
                                  <div class="about-service-content">
                                     <h4>BEST DESTINATION</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    <p>Unveil the best destinations that will leave you awe-inspired and create lifelong memories.</p>
                                  </div>
                               </div>
                            </div>
@@ -152,7 +151,7 @@
                                  </div>
                                  <div class="about-service-content">
                                     <h4>PERSONAL SERVICE</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    <p>dedicated, helpful, considerate, friendly, courteous.</p>
                                  </div>
                               </div>
                            </div>
@@ -181,7 +180,7 @@
                               About Vaneshwari Holidays
                            </h3>
                            <div class="textwidget widget-text">
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
+                              Embark on a transformative global adventure,discovering diverse cultures, breathtaking landscapes, and forging unforgettable memories.
                            </div>
                         </aside>
                      </div>
@@ -189,7 +188,6 @@
                         <aside class="widget widget_text">
                            <h3 class="widget-title">CONTACT INFORMATION</h3>
                            <div class="textwidget widget-text">
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                               <ul>
                                  <li>
                                     <a href="#"><i class="fas fa-phone-alt"></i> +91 90439 09961</a>
