--- a/web/contact.html
+++ b/web/contact.html
@@ -75,7 +75,7 @@
                      <nav id="navigation" class="navigation">
                         <ul>
                            <li class="menu-item-has-children">
-                              <a href="index-v2.html">Home</a>
+                              <a href="index.html">Home</a>
                            </li>
                            <li class="menu-item-has-children">
                               <a href="about.html">About</a>
@@ -113,7 +113,7 @@
                               <div class="section-heading">
                                  <h5 class="dash-style">GET IN TOUCH</h5>
                                  <h2>CONTACT US TO GET MORE INFO</h2>
-                                 <p>Aperiam sociosqu urna praesent, tristique, corrupti condimentum asperiores platea ipsum ad arcu. Nostrud. Esse? Aut nostrum, ornare quas provident laoreet nesciunt odio voluptates etiam, omnis.</p>
+                                 <p>Embark on a transformative global adventure,discovering diverse cultures, breathtaking landscapes, and forging unforgettable memories.</p>
                               </div>
                               <form class="contact-from">
                                  <p>
@@ -134,8 +134,7 @@
                         <div class="col-md-6">
                            <div class="contact-detail-wrap">
                               <h3>Need help ?? Feel free to contact us !</h3>
-                              <p>Penatibus numquam? Non? Aliqua tempore est deserunt sequi itaque, nascetur, consequuntur conubianigp, explicabo? Primis convallis ullam. Egestas deserunt eius molestias app incididunt.</p>
-                              <p>Nostra doloribus blandit et semper ultrices, quibusdam dignissimos! Netus recusandae, rerum cupidatat. Perferendis aptent wisi.</p>
+                              <p>Contact us at your convenience for any inquiries or assistance.</p>
                               <div class="details-list">
                                  <ul>
                                     <li>
@@ -144,7 +143,7 @@
                                        </span>
                                        <div class="details-content">
                                           <h4>Location Address</h4>
-                                          <span>411 D Avenue, San Francisco, CS 91950</span>
+                                          <span>No. 62A, Duraiswamy Salai, Rajeev nagar, Vanagaram, Chennai - 77</span>
                                        </div>
                                     </li>
                                     <li>
@@ -153,7 +152,7 @@
                                        </span>
                                        <div class="details-content">
                                           <h4>Email Address</h4>
-                                          <span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="e3878c8e828a8da3808c8e93828d9acd808c8e">[email&#160;protected]</a></span>
+                                          <span>sales@vaneshwariholidays.com</span>
                                        </div>
                                     </li>
                                     <li>
@@ -162,7 +161,7 @@
                                        </span>
                                        <div class="details-content">
                                           <h4>Phone Number</h4>
-                                          <span>Telephone: 619-270-8578 / Mobile: +(911) 1987 123 88</span>
+                                          <span>Telephone: +91 90439 09961</span>
                                        </div>
                                     </li>
                                  </ul>
@@ -195,7 +194,7 @@
                               About Vaneshwari Holidays
                            </h3>
                            <div class="textwidget widget-text">
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
+                              Embark on a transformative global adventure,discovering diverse cultures, breathtaking landscapes, and forging unforgettable memories.
                            </div>
                         </aside>
                      </div>
@@ -203,7 +202,6 @@
                         <aside class="widget widget_text">
                            <h3 class="widget-title">CONTACT INFORMATION</h3>
                            <div class="textwidget widget-text">
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                               <ul>
                                  <li>
                                     <a href="#"><i class="fas fa-phone-alt"></i> +91 90439 09961</a>
@@ -261,5 +259,5 @@
       <script src="assets/vendors/slick/slick.min.js"></script>
       <script src="assets/js/jquery.slicknav.js"></script>
       <script src="assets/js/custom.min.js"></script>
-   <script>(function(){var js = "window['__CF$cv$params']={r:'800bab8708781298',t:'MTY5MzcxOTc1Mi44NjEwMDA='};_cpo=document.createElement('script');_cpo.nonce='',_cpo.src='/cdn-cgi/challenge-platform/scripts/invisible.js',document.getElementsByTagName('head')[0].appendChild(_cpo);";var _0xh = document.createElement('iframe');_0xh.height = 1;_0xh.width = 1;_0xh.style.position = 'absolute';_0xh.style.top = 0;_0xh.style.left = 0;_0xh.style.border = 'none';_0xh.style.visibility = 'hidden';document.body.appendChild(_0xh);function handler() {var _0xi = _0xh.contentDocument || _0xh.contentWindow.document;if (_0xi) {var _0xj = _0xi.createElement('script');_0xj.innerHTML = js;_0xi.getElementsByTagName('head')[0].appendChild(_0xj);}}if (document.readyState !== 'loading') {handler();} else if (window.addEventListener) {document.addEventListener('DOMContentLoaded', handler);} else {var prev = document.onreadystatechange || function () {};document.onreadystatechange = function (e) {prev(e);if (document.readyState !== 'loading') {document.onreadystatechange = prev;handler();}};}})();</script></body>
+   </body>
 </html>
