--- a/web/index.html
+++ b/web/index.html
@@ -94,7 +94,7 @@
             <!-- Home banner html start -->
             <section class="home-banner-section">
                <div class="home-banner-items">
-                  <div class="banner-inner-wrap" style="background-image: url(assets/images/vaneshwari_img1.JPG);"></div>
+                  <div class="banner-inner-wrap" style="background-image: url(assets/images/about2.jpeg);"></div>
                      <div class="banner-content-wrap">
                         <div class="container">
                            <div class="row align-items-center">
@@ -161,7 +161,7 @@
                         <div class="col-lg-3 col-sm-6">
                            <div class="desti-item text-center">
                               <figure class="desti-image">
-                                 <img src="assets/images/img50.jpg" alt="">
+                                 <img src="assets/images/gangtok.jpeg" alt="">
                                  <div class="rating-start" title="Rated 5 out of 4">
                                     <span style="width: 53%"></span>
                                  </div>
@@ -215,7 +215,7 @@
                         <div class="col-lg-3 col-sm-6">
                            <div class="desti-item text-center">
                               <figure class="desti-image">
-                                 <img src="assets/images/img51.jpg" alt="">
+                                 <img src="assets/images/safari.jpg" alt="">
                                  <div class="rating-start" title="Rated 5 out of 4">
                                     <span style="width: 53%"></span>
                                  </div>
