--- a/web/about.html
+++ b/web/about.html
@@ -75,7 +75,7 @@
                      <nav id="navigation" class="navigation">
                         <ul>
                            <li class="menu-item-has-children">
-                              <a href="index .html">Home</a>
+                              <a href="index.html">Home</a>
                            </li>
                            <li class="menu-item-has-children">
                               <a href="about.html">About</a>
@@ -93,7 +93,7 @@
          <main id="content" class="site-main">
             <!-- Inner Banner html start-->
             <section class="inner-banner-wrap">
-               <div class="inner-baner-container" style="background-image: url(assets/images/inner-banner.jpg);">
+               <div class="inner-baner-container" style="background-image: url(assets/images/about.jpeg);">
                   <div class="container">
                      <div class="inner-banner-content">
                         <h1 class="inner-title">About us</h1>
@@ -157,7 +157,7 @@
                            </div>
                         </div>
                      </div>
-                     <div class="about-video-wrap" style="background-image: url(assets/images/img25.jpg);">
+                     <div class="about-video-wrap" style="background-image: url(assets/images/about2.jpeg);">
                         <div class="video-button">
                            <a id="video-container" data-video-id="IUN664s7N-c">
                               <i class="fas fa-play"></i>
