changes done for images

--- a/web/index.html
+++ b/web/index.html
@@ -179,7 +179,7 @@
                         <div class="col-lg-3 col-sm-6">
                            <div class="desti-item text-center">
                               <figure class="desti-image">
-                                 <img src="assets/images/varanasi_1.jpeg" alt="">
+                                 <img src="assets/images/banaras.jpeg" alt="">
                                  <div class="rating-start" title="Rated 5 out of 4">
                                     <span style="width: 53%"></span>
                                  </div>
@@ -197,7 +197,7 @@
                         <div class="col-lg-3 col-sm-6">
                            <div class="desti-item text-center">
                               <figure class="desti-image">
-                                 <img src="assets/images/kerala.jpeg" alt="">
+                                 <img src="assets/images/kerala1.jpeg" alt="">
                                  <div class="rating-start" title="Rated 5 out of 4">
                                     <span style="width: 53%"></span>
                                  </div>
@@ -215,7 +215,7 @@
                         <div class="col-lg-3 col-sm-6">
                            <div class="desti-item text-center">
                               <figure class="desti-image">
-                                 <img src="assets/images/rajsthan2.jpeg" alt="">
+                                 <img src="assets/images/rajsthan3.jpeg" alt="">
                                  <div class="rating-start" title="Rated 5 out of 4">
                                     <span style="width: 53%"></span>
                                  </div>
