--- a/web/contact.html
+++ b/web/contact.html
@@ -71,6 +71,7 @@
                         </a>
                      </h1>
                   </div>
+                  <div class="site-name">Vaneshwari Holidays</div>
                   <div class="main-navigation d-none d-lg-block">
                      <nav id="navigation" class="navigation">
                         <ul>
