service page aded

--- a/web/about.html
+++ b/web/about.html
@@ -84,6 +84,9 @@
                            <li class="menu-item-has-children">
                               <a href="contact.html">Contact</a>
                            </li>
+                           <li class="menu-item-has-children">
+                              <a href="services.html">Services</a>
+                           </li>
                         </ul>
                      </nav>
                   </div>
