--- a/web/services.html
+++ b/web/services.html
@@ -100,93 +100,57 @@
                <div class="inner-baner-container" style="background-image: url(assets/images/about.jpeg);">
                   <div class="container">
                      <div class="inner-banner-content">
-                        <h1 class="inner-title">Contact us</h1>
+                        <h1 class="inner-title">Services</h1>
                      </div>
                   </div>
                </div>
                <div class="inner-shape"></div>
             </section>
             <!-- Inner Banner html end-->
-            <!-- contact form html start -->
-            <div class="contact-page-section">
-               <div class="contact-form-inner">
+            <!-- about section html start -->
+            <section class="about-section about-page-section">
+               <div class="about-service-wrap">
                   <div class="container">
-                     <div class="row">
-                        <div class="col-md-6">
-                           <div class="contact-from-wrap">
-                              <div class="section-heading">
-                                 <h5 class="dash-style">GET IN TOUCH</h5>
-                                 <h2>CONTACT US TO GET MORE INFO</h2>
-                                 <p>Embark on a transformative global adventure,discovering diverse cultures, breathtaking landscapes, and forging unforgettable memories.</p>
-                              </div>
-                              <form method="post" name="contact_form" action="contact-form-handler.php">
-                                 <p>
-                                    <input type="text" name="name" placeholder="Your Name*">
-                                 </p>
-                                 <p>
-                                    <input type="email" name="email" placeholder="Your Email*">
-                                 </p>
-                                 <p>
-                                    <textarea rows="8" name="message" placeholder="Your Message*"></textarea>
-                                 </p>
-                                 <p>
-                                    <input type="submit" name="submit" value="SUBMIT MESSAGE">
-                                 </p>
-                              </form>
+                     <div class="section-heading">
+                        <div class="row align-items-end">
+                           <div class="col-lg-6">
+                              <h5 class="dash-style">OUR SERVICE GUIDE</h5>
+                              <h2>OUR SERVICES ARE BEST IN THE MARKET</h2>
                            </div>
-                        </div>
-                        <div class="col-md-6">
-                           <div class="contact-detail-wrap">
-                              <h3>Need help ?? Feel free to contact us !</h3>
-                              <p>Contact us at your convenience for any inquiries or assistance.</p>
-                              <div class="details-list">
-                                 <ul>
-                                    <li>
-                                       <span class="icon">
-                                          <i class="fas fa-map-signs"></i>
-                                       </span>
-                                       <div class="details-content">
-                                          <h4>Location Address</h4>
-                                          <span>No. 62A, Duraiswamy Salai, Rajeev nagar, Vanagaram, Chennai - 77</span>
-                                       </div>
-                                    </li>
-                                    <li>
-                                       <span class="icon">
-                                          <i class="fas fa-envelope-open-text"></i>
-                                       </span>
-                                       <div class="details-content">
-                                          <h4>Email Address</h4>
-                                          <span>sales@vaneshwariholidays.com</span>
-                                       </div>
-                                    </li>
-                                    <li>
-                                       <span class="icon">
-                                          <i class="fas fa-phone-volume"></i>
-                                       </span>
-                                       <div class="details-content">
-                                          <h4>Phone Number</h4>
-                                          <span>Telephone: +91 90439 09961</span>
-                                       </div>
-                                    </li>
-                                 </ul>
-                              </div>
-                              <div class="contct-social social-links">
-                                 <h3>Follow us on social media..</h3>
-                                 <ul>
-                                    <li><a href="https://m.facebook.com/profile.php/?id=61550523602514"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-                                    <li><a href="https://instagram.com/vaneshwari8?igshid=MWZjMTM2ODFkZg=="><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-                                 </ul>
+                           <div class="col-lg-6">
+                              <div class="section-disc">
+                                 <p> Conferences, Meeting & Event, Corporate tour, Group tour, Educational tour, Ticketing, Hotel booking, Adventure Trip, Honeymoon trip, Wedding planner - Providing comprehensive and personalized travel and event solutions for every occasion.</p>
                               </div>
                            </div>
                         </div>
                      </div>
+                     <div class="about-service-container">
+                        <h3>
+                        <ul>
+                           <li>Hotel Booking</li>
+                           <li>Ticketing</li>
+                           <li>Adventure Trip</li>
+                           <li>Honeymoon trip</li>
+                           <li>Corporate Tour</li>
+                           <li>Educational Tour</li>
+                           <li>Conferences</li>
+                           <li>Meeting & Event</li>
+                           <li>Wedding Planner</li>
+                         </ul>
+                         </h3>  
+                     </div>
+                     <div class="about-video-wrap" style="background-image: url(assets/images/rajsthan2.jpeg);">
+                        <div class="video-button">
+                           <a id="video-container" data-video-id="IUN664s7N-c">
+                              <i class="fas fa-play"></i>
+                           </a>
+                        </div>
+                     </div>
                   </div>
                </div>
-               <div class="map-section">
-                  <iframe src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=No. 62A, Duraiswamy Salai, Rajeev nagar, Vanagaram, Chennai - 77&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" height="400" allowfullscreen="" loading="lazy"></iframe>
-               </div>
-            </div>
-            <!-- contact form html end -->
+               <!-- callback html end -->
+            </section>
+            <!-- about html end -->
          </main>
          <footer id="colophon" class="site-footer footer-primary">
             <div class="top-footer">
@@ -263,5 +227,5 @@
       <script src="assets/vendors/slick/slick.min.js"></script>
       <script src="assets/js/jquery.slicknav.js"></script>
       <script src="assets/js/custom.min.js"></script>
-   </body>   
+   </body>
 </html>
