--- a/web/contact.html
+++ b/web/contact.html
@@ -129,6 +129,14 @@
                                  <p>
                                     <textarea rows="8" name="message" placeholder="Your Message*"></textarea>
                                  </p>
+                                 <div class="form-group">
+                                    <div class="input-group">
+                                       <input type="text" name="captcha_code" id="captcha_code" class="form-control" />
+                                       <span class="input-group-addon" style="padding:0">
+                                       <img src="image.php" id="captcha_image" />
+                                       </span>
+                                    </div>
+                                  </div>
                                  <p>
                                     <input type="submit" name="submit" value="SUBMIT MESSAGE">
                                  </p>
@@ -183,7 +191,7 @@
                   </div>
                </div>
                <div class="map-section">
-                  <iframe src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=No. 62A, Duraiswamy Salai, Rajeev nagar, Vanagaram, Chennai - 77&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" height="400" allowfullscreen="" loading="lazy"></iframe>
+                  <iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Thambu%20Chetty%20Street%2C%20Parry's%20Corner%2C%20Chennai%2C%20Tamil%20Nadu%2C%20India&key=AIzaSyDkrKosnMAgXu3iUH-2tRQMcrWcQ4W9CG4" height="400"></iframe>
                </div>
             </div>
             <!-- contact form html end -->
