--- a/web/index.html
+++ b/web/index.html
@@ -143,6 +143,13 @@
                                              <input class="input-date-picker" name="to" type="text" name="s" placeholder="MM / DD / YY" autocomplete="off" readonly="readonly">
                                           </div>
                                           <div class="input-group width-col-1">
+                                             <label> Captcha* </label>
+                                             <input type="text" name="captcha_code" id="captcha_code"/>
+                                          </div>
+                                          <div class="input-group width-col-1">
+                                             <img src="image.php" id="captcha_image" />
+                                          </div>
+                                          <div class="input-group width-col-1">
                                              <label class="screen-reader-text"> Search </label>
                                              <input type="submit" name="travel-search" value="INQUIRE NOW">
                                           </div>
